--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.32.2",
+    "@react-spectrum/toast": "^3.0.0-beta.7",
     "@spectrum-icons/workflow": "^4.2.7",
     "firebase": "^10.6.0",
     "react": "^18.2.0",
