--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "declaration": false,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/types.ts"],
   "exclude": ["node_modules"]
 }
