--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "type": "module",
   "homepage": "https://kamchibekov.github.io/book-summary",
   "scripts": {
-    "start": "webpack serve --port 3000 --mode development --open",
-    "build": "webpack --mode production"
+    "serve": "webpack serve --port 4000 --mode development --open",
+    "dev": "webpack watch --mode development",
+    "build": "webpack build --mode production"
   },
   "dependencies": {
-    "@adobe/react-spectrum": "^3.32.2",
-    "@react-spectrum/toast": "^3.0.0-beta.7",
-    "@spectrum-icons/workflow": "^4.2.7",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.15",
     "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
